# shuttlings-cch24

./: .gitignore  Cargo.toml  README.md  Secrets.toml.example  Shuttle.toml  compose.yml  rust-toolchain.toml
src/: bucket.rs  connect4.rs  cookie.rs  handlers.rs  jwt.rs  lib.rs  main.rs  quotes.rs  routes.rs
src/bucket/: milk.rs  unit.rs
src/connect4/: game.rs  model.rs
src/cookie/: manager.rs
src/handlers/: auth_token.rs  connect4.rs  ipv4_dest.rs  ipv4_key.rs  ipv6_dest.rs  ipv6_key.rs  manifest.rs  milk.rs  quotes.rs  seek.rs
src/jwt/: decoder.rs  error.rs  manager.rs
src/quotes/: model.rs  ops.rs  repository.rs  shorten.rs
src/quotes/migrations/: 01-schema.sql
src/routes/: json.rs  reject.rs  state.rs  toml.rs
