[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
cargo-manifest = "0.17"
tracing = "0.1"
tracing-subscriber.version = "0.3"
tracing-subscriber.features = ["env-filter", "fmt"]
shuttle-runtime = { version = "0.49.0", default-features = false }
shuttle-warp = "0.49.0"
tokio = "1.26.0"
warp = "0.3.3"
