[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono.version = "0.4"
chrono.default-features = false
chrono.features = ["std", "clock", "serde"]
uuid = { version = "1.11", features = ["serde", "rng", "v4"] }
toml = "0.8"
cargo-manifest = "0.17"
jsonwebtoken = "9.3.0"
percent-encoding = "2.3"
tracing = "0.1"
tracing-subscriber.version = "0.3"
tracing-subscriber.features = ["env-filter", "fmt"]
shuttle-runtime = { version = "0.49.0", default-features = false }
shuttle-shared-db = { version = "0.49.0", features = ["sqlx", "postgres"] }
shuttle-warp = "0.49.0"
tokio = "1.42.0"
warp = "0.3"
sqlx.version = "0.8"
sqlx.features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"]
